# goit-algo2-hw-06

./: README.md  most_freguents_words.py  pyproject.toml
